# bms-table-mirror

./: .gitignore  Cargo.toml  DATA.md  DATA_URL.md  README.md  pyproject.toml  tables.toml
.github/: renovate.json
.github/workflows/: rust.yml  update-info.yml  update-tables.yml
lists/: DARKSABUN.json
outputs/: tables.json  tables_2sb.json  tables_gh_proxy.json  tables_gitee.json  tables_intermediate_2sb.json  tables_proxy.json
scripts/: gen_data.py  gen_data_md.py  gen_data_url_md.py  gen_tables.py  gen_tables_proxy.py  generate_outputs.py  generate_table_json.py
src/: config.rs  filesystem.rs  logger.rs  main.rs
tables/(＊°▽°＊)八(＊°▽°＊)♪/: data.json  header.json  info.json
tables/.WAS難易度表/: info.json
tables/100min Fumen Cooking!!/: info.json
tables/16分乱打難易度表(仮)/: data.json  info.json
tables/1998 to 2020 (仮)/: info.json
tables/1998 to 2024/: info.json
tables/1st/: header.json  info.json
tables/200BPMやる用/: info.json
tables/27,934B-JOY/: data.json  header.json  info.json
tables/29Another Respect/: header.json  info.json
tables/2RLZ/: info.json
tables/2nd/: info.json
tables/5KEYS AERY/: info.json
tables/980円の人難易度表/: info.json
tables/AMERIA/: info.json
tables/ATOM難易度表(DP)/: data.json  header.json  info.json
tables/ATOM難易度表(SP)/: data.json  header.json  info.json
tables/All-embracing Insane Charts/: info.json
tables/BAECON難易度表/: data.json  header.json  info.json
tables/BKANOTHER/: info.json
tables/BMS BPM Battle Beta/: info.json
tables/BMS EVENT 2015/: data.json  info.json
tables/BMS EVENT 2016/: header.json  info.json
tables/BMS Fav list table/: data.json  header.json  info.json
tables/BMS OBJECT BATTLER 2015/: data.json  header.json  info.json
tables/BMS chart Editors’ League/: info.json
tables/BMSS 2021 Pattern Package/: data.json  header.json  info.json
tables/BMSS 2022 Pattern Package/: data.json  header.json  info.json
tables/BMSS 2023 Pattern Package/: data.json  header.json  info.json
tables/BMSかん字ドリル 2年生/: header.json  info.json
(+1426 files in other folders)
