[package]
name = "bms-table-mirror"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/MiyakoMeow/bms-table-mirror"
description = ""

[dependencies]
bms-table = "0.6"
reqwest = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

env_logger = "0.11.8"
log = "0.4.28"