[package]
name = "bms-table-mirror"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
homepage = "https://github.com/MiyakoMeow/bms-table-mirror"
description = ""

[dependencies]
bms-table = "0.8"
reqwest = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }

env_logger = "0.11"
log = "0.4"
anyhow = "1"
url = "2"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.9"
